# europython25-marimo

./: .gitignore  EUP25_Marimo_D1.py  EUP25_Marimo_D2.py  EUP25_Marimo_D2_generate_data.py  README.md  marimo_inference.py  pyproject.toml  trained_model_2025_07_15.pkl
data/: european_snacks.csv  trdelnik_sales.csv
